[package]
name = "varnishslog-serch"
version = "0.1.0"
authors = ["Jakub Pastuszek <jpastuszek@gmail.com>"]

[[bin]]
name = "schema"
path = "src/schema.rs"

[[bin]]
name = "process"
path = "src/process.rs"

[dependencies]
dot_json = "0.2.0"
serde_json = { version = "1.0.10", features = ["preserve_order"] }
